# bemani-controller-firm

./: .envrc  .gitignore  CMakeLists.txt  README.md  compile.sh  setup-env.sh
include/: button.h  button.hpp  encoder.hpp  logger.h  time_utils.h  tusb_config.h  usb.hpp  usb_descriptors.h
src/: button.c  button.cpp  encoder.cpp  encoder.pio  logger.c  logger.cpp  main.c  main.cpp  usb.cpp  usb_descriptors.c
